--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
